--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Bubbler+One&family=Inter:wght@500&family=Noto+Sans:wght@400;500;600;700&family=Roboto+Flex:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400&display=swap');
+
+
 *{
     box-sizing:border-box;
     margin:0;
     padding:0;
+    font-family: "Outfit", sans-serif;
 }
 .App{
     min-width:100%;
