--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
     margin:0;
     padding:0;
     font-family: "Outfit", sans-serif;
+    font-family: Inter,sans-serif,"Segoe UI","Roboto,Oxygen-Sans,Ubuntu,Cantarell,""Helvetica Neue",sans-serif;
 }
 .App{
     min-width:100%;
